--- a/Mp3App/Features/Home/Albums/AlbumCollectionViewCell.xib
+++ b/Mp3App/Features/Home/Albums/AlbumCollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,28 +10,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCollectionViewCell" id="gTV-IL-0wX" customClass="AlbumCollectionViewCell" customModule="Mp3App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="205" height="307"/>
+            <rect key="frame" x="0.0" y="0.0" width="288" height="347"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="205" height="307"/>
+                <rect key="frame" x="0.0" y="0.0" width="288" height="347"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GUS-Li-SAh">
-                        <rect key="frame" x="0.0" y="0.0" width="205" height="205"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GUS-Li-SAh">
+                        <rect key="frame" x="0.0" y="0.0" width="288" height="288"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="GUS-Li-SAh" secondAttribute="height" id="nA7-3B-z3A"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pB0-ra-Guf">
-                        <rect key="frame" x="0.0" y="215" width="205" height="82"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="0.0" y="298" width="288" height="17"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="pB0-ra-Guf" secondAttribute="bottom" constant="10" id="EK1-uh-RXz"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pB0-ra-Guf" secondAttribute="bottom" constant="10" id="EK1-uh-RXz"/>
                 <constraint firstAttribute="trailing" secondItem="pB0-ra-Guf" secondAttribute="trailing" id="Jgg-7K-rGx"/>
                 <constraint firstItem="GUS-Li-SAh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="MS5-5y-HUD"/>
                 <constraint firstItem="pB0-ra-Guf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lhx-rB-TdC"/>
@@ -40,12 +41,12 @@
                 <constraint firstItem="pB0-ra-Guf" firstAttribute="top" secondItem="GUS-Li-SAh" secondAttribute="bottom" constant="10" id="tCK-wy-UWM"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="205" height="307"/>
+            <size key="customSize" width="288" height="347"/>
             <connections>
                 <outlet property="albumImageView" destination="GUS-Li-SAh" id="2j7-Yu-dUw"/>
                 <outlet property="albumTitleLabel" destination="pB0-ra-Guf" id="fyr-Yr-qMK"/>
             </connections>
-            <point key="canvasLocation" x="-131.15942028985509" y="187.16517857142856"/>
+            <point key="canvasLocation" x="-71.014492753623188" y="200.55803571428569"/>
         </collectionViewCell>
     </objects>
 </document>
