--- a/Mp3App/Features/Home/Albums/AlbumsTableViewCell.xib
+++ b/Mp3App/Features/Home/Albums/AlbumsTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,15 +17,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hky-sI-W5F">
-                        <rect key="frame" x="20" y="20" width="317" height="24"/>
+                        <rect key="frame" x="20" y="10" width="317" height="24"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="QjD-he-uYT">
-                        <rect key="frame" x="0.0" y="54" width="357" height="154"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NHZ-Xf-FOs">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="QjD-he-uYT">
+                        <rect key="frame" x="0.0" y="54" width="357" height="144"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NHZ-Xf-FOs">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -35,10 +35,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="QjD-he-uYT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="0Rg-Ts-qwz"/>
-                    <constraint firstAttribute="bottom" secondItem="QjD-he-uYT" secondAttribute="bottom" id="10S-Qe-0HO"/>
+                    <constraint firstAttribute="bottom" secondItem="QjD-he-uYT" secondAttribute="bottom" constant="10" id="10S-Qe-0HO"/>
                     <constraint firstAttribute="trailing" secondItem="QjD-he-uYT" secondAttribute="trailing" id="Ezl-9v-zC5"/>
-                    <constraint firstItem="QjD-he-uYT" firstAttribute="top" secondItem="hky-sI-W5F" secondAttribute="bottom" constant="10" id="YUA-4i-t2A"/>
-                    <constraint firstItem="hky-sI-W5F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="ZW8-ap-AIu"/>
+                    <constraint firstItem="QjD-he-uYT" firstAttribute="top" secondItem="hky-sI-W5F" secondAttribute="bottom" constant="20" id="YUA-4i-t2A"/>
+                    <constraint firstItem="hky-sI-W5F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ZW8-ap-AIu"/>
                     <constraint firstItem="hky-sI-W5F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="nXG-KJ-1cY"/>
                     <constraint firstAttribute="trailing" secondItem="hky-sI-W5F" secondAttribute="trailing" constant="20" id="uAh-gc-sXr"/>
                 </constraints>
