--- a/Mp3App/Features/Home/Slide/SlideTableViewCell.xib
+++ b/Mp3App/Features/Home/Slide/SlideTableViewCell.xib
@@ -24,7 +24,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="iH6-so-s3B">
-                                <rect key="frame" x="20" y="30" width="331" height="167"/>
+                                <rect key="frame" x="20" y="20" width="331" height="177"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lQu-jL-foh">
                                     <size key="itemSize" width="50" height="50"/>
@@ -34,7 +34,7 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="TsY-eQ-ZeC">
-                                <rect key="frame" x="302" y="40" width="39" height="10"/>
+                                <rect key="frame" x="302" y="30" width="39" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="MGZ-JR-J5z"/>
                                 </constraints>
@@ -45,7 +45,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="iH6-so-s3B" firstAttribute="leading" secondItem="AWW-fm-XzS" secondAttribute="leading" constant="20" id="62o-lx-uwc"/>
-                            <constraint firstItem="iH6-so-s3B" firstAttribute="top" secondItem="AWW-fm-XzS" secondAttribute="top" constant="30" id="6Tv-py-FU9"/>
+                            <constraint firstItem="iH6-so-s3B" firstAttribute="top" secondItem="AWW-fm-XzS" secondAttribute="top" constant="20" id="6Tv-py-FU9"/>
                             <constraint firstAttribute="bottom" secondItem="iH6-so-s3B" secondAttribute="bottom" constant="20" id="LK4-91-R03"/>
                             <constraint firstAttribute="trailing" secondItem="pUW-xP-GHJ" secondAttribute="trailing" id="LS5-bP-hzO"/>
                             <constraint firstItem="TsY-eQ-ZeC" firstAttribute="top" secondItem="iH6-so-s3B" secondAttribute="top" constant="10" id="SJ1-92-Awo"/>
@@ -68,6 +68,7 @@
             <connections>
                 <outlet property="backgroundImageView" destination="pUW-xP-GHJ" id="a42-Ye-j32"/>
                 <outlet property="collectionView" destination="iH6-so-s3B" id="vyD-NP-csD"/>
+                <outlet property="containerView" destination="AWW-fm-XzS" id="euD-df-jAR"/>
                 <outlet property="pageControl" destination="TsY-eQ-ZeC" id="bAr-ab-u4c"/>
             </connections>
             <point key="canvasLocation" x="25.362318840579711" y="159.70982142857142"/>
