create firebase database

--- a/Mp3App/Features/Login/LoginViewController.storyboard
+++ b/Mp3App/Features/Login/LoginViewController.storyboard
@@ -189,6 +189,7 @@
                     <connections>
                         <outlet property="loginButton" destination="i8E-PT-0Cm" id="s97-SF-PHe"/>
                         <outlet property="passwordTextField" destination="ccX-Du-XcB" id="r4g-sg-NTT"/>
+                        <outlet property="registerButton" destination="Uvr-tI-YPj" id="ROG-9D-DPA"/>
                         <outlet property="usernameTextField" destination="6cr-SZ-Z4q" id="4DB-jc-4EX"/>
                     </connections>
                 </viewController>
