--- a/Mp3App/Features/Mypage/MypageViewController.storyboard
+++ b/Mp3App/Features/Mypage/MypageViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="edg-AW-ae6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="edg-AW-ae6">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,25 +10,28 @@
         <!--Mypage View Controller-->
         <scene sceneID="3Dj-mr-CLf">
             <objects>
-                <viewController id="edg-AW-ae6" customClass="MypageViewController" customModule="RxSwiftCoordinator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="edg-AW-ae6" customClass="MypageViewController" customModule="Mp3App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n9D-rl-6la">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mypage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5M5-bq-AU5">
-                                <rect key="frame" x="154.5" y="430" width="105.5" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="37F-4O-fsT">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="5M5-bq-AU5" firstAttribute="centerX" secondItem="n9D-rl-6la" secondAttribute="centerX" id="DEJ-p2-gJY"/>
-                            <constraint firstItem="5M5-bq-AU5" firstAttribute="centerY" secondItem="n9D-rl-6la" secondAttribute="centerY" id="xeB-DE-by4"/>
+                            <constraint firstItem="37F-4O-fsT" firstAttribute="top" secondItem="n9D-rl-6la" secondAttribute="top" id="5GM-0w-3sa"/>
+                            <constraint firstItem="37F-4O-fsT" firstAttribute="leading" secondItem="kMq-so-Vte" secondAttribute="leading" id="Nij-yx-NK6"/>
+                            <constraint firstItem="kMq-so-Vte" firstAttribute="trailing" secondItem="37F-4O-fsT" secondAttribute="trailing" id="czF-KE-LaF"/>
+                            <constraint firstItem="kMq-so-Vte" firstAttribute="bottom" secondItem="37F-4O-fsT" secondAttribute="bottom" id="y6i-Wi-dFH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kMq-so-Vte"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="37F-4O-fsT" id="Pvo-jo-oeL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Wh-RP-fga" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
