get data from firebase for playlist screen

--- a/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailViewController.storyboard
+++ b/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5on-e2-S8O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5on-e2-S8O">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,10 +16,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYC-ZV-V4B">
-                                <rect key="frame" x="50" y="54" width="314" height="50"/>
+                                <rect key="frame" x="50" y="54" width="314" height="40"/>
                                 <color key="backgroundColor" red="0.52362823489999999" green="0.27759590740000001" blue="0.65983343120000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="JRs-0m-F9Q"/>
+                                    <constraint firstAttribute="height" constant="40" id="JRs-0m-F9Q"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <state key="normal" title="PHÁT NGẪU NHIÊN">
@@ -27,7 +27,7 @@
                                 </state>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hQQ-tg-tHC">
-                                <rect key="frame" x="0.0" y="114" width="414" height="748"/>
+                                <rect key="frame" x="0.0" y="104" width="414" height="758"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                         </subviews>
@@ -43,6 +43,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Zcr-aN-buV"/>
                     </view>
+                    <navigationItem key="navigationItem" id="EwI-DE-iP2">
+                        <barButtonItem key="backBarButtonItem" title=" " id="ZlH-C8-FaG"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="playButton" destination="RYC-ZV-V4B" id="aVf-g3-DSm"/>
                         <outlet property="tableView" destination="hQQ-tg-tHC" id="Mzn-00-Ay4"/>
@@ -50,7 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="awj-xP-5vQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-14" y="71"/>
+            <point key="canvasLocation" x="-170" y="45"/>
         </scene>
     </scenes>
 </document>
